<resources>
    <string name="app_name">EletricsCarsApp</string>
    <string name="image_of_an_eletric_car">Image of an eletric car.</string>
    <string name="cars">Cars</string>
    <string name="eletric_car">Eletric car</string>
    <string name="favorites">Favorites</string>
    <string name="value">Value</string>
    <string name="battery">Battery</string>
    <string name="recharge">Recharge</string>
    <string name="power">Power</string>
    <string name="title_activity_calc_at">calc_at</string>
    <string name="title_activity_calculate_autonomy">CalculateAutonomyActivity</string>
    <string name="value_autonomy">Value Autonomy</string>
</resources>